src/test/deca/context/valid/SansObjet/DeclVar-EQ-boolean-float-int.deca
// Description:
//    Declaration of a boolean variable using == operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    int y = 2; 
    boolean z = 1.5 == 2; 
}
